<resources>
<string name="app_name">SocksFast VPN</string>
	<string name="app_description">SocksFast VPN is an SSH TUNNEL client, designed to bypass local blocking and censorship on the network.</string>
<string name="attention">Attention</string>
<string name="cancel">Cancel</string>
<string name="ok">Ok</string>
    <string name="feedback_email_subject" translatable="false">Liberty VPN</string>
   <string name="rating_dialog_submit">Ok Jj</string>
    <string name="rating_promote">We are working hard for a better user experience. \nWe\'d greatly appreciate if you can rate us.</string>
    <string name="rating_title_1">Oh, no!</string>
    <string name="rating_title_2">We like you too!</string>
    <string name="rating_text_1">Please leave us some feedback.</string>
    <string name="rating_text_4">Thanks for your feedback.</string>
    <string name="rating_text_5">The best we can get :)</string>
   <string name="b" translatable="false">ca-app-pub-11583066993872/9608358407</string>
 <string name="drawer_premium_text">PREMIUM</string>
    <string name="drawer_share_text">TELL YOUR FRIEND</string>
    <string name="drawer_rate_text">RATE US</string>
    <string name="drawer_about_text">ABOUT</string>
    <string name="drawer_policy_text">PRIVACY POLICY</string>
    <string name="drawer_faq_text">FAQs</string>
	<string name="app_name_premium">Liberty VPN Premium</string>
    <string name="privacy_policy_title" translatable="false">Privacy Policy</string>
    <string name="unlimited_text">Unlimited</string>
    <string name="secure_text">Secure</string>
	   <string name="developers_email" translatable="false">your_developer_email</string>
    <string name="privacy_policy_link" translatable="false">https://www.google.com</string>
	<string name="rating_dialog_feedback_title">Support</string>
    <string name="no_ads_text">No Ads</string>
    <string name="change_text">Change</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="download_text">DOWNLOAD</string>
    <string name="dummy_ip_text">222.432.00.32</string>
    <string name="dummy_time_text">00:03:32</string>
    <string name="dummy_your_ip_text">Your IP : </string>
    <string name="go_premium_text">Go to Premium</string>
    <string name="not_connected_text">Not Connected</string>
    <string name="start_text">START</string>
    <string name="upload_text">UPLOAD</string>
    <string name="subscription_text">SUBSCRIPTION</string>
    <string name="status_text">Status : </string>
    <string name="select_server_text">Select Server</string>
    <string name="rate_app_text">RATE THIS APP</string>
    <string name="feedback_text">Feedback</string>
    <string name="content_text">Content</string>
    <string name="zero_text">0.0</string>
    <string name="speed_text">Speed</string>
    <string name="tcp_text">TCP</string>
    <string name="ping_text">Ping</string>
    <string name="submit_text">Submit</string>
    <string name="you_are_connected_text">You are Connected</string>
    <string name="connection_status_text">Connection Status</string>
    <string name="zero_duration_text">Duration: 00:00:00</string>
    <string name="packet_received_text">Packet Received:</string>
    <string name="no_thanks_text">No Thanks</string>
    <string name="restore_purchase_text">Restore Purchase</string>
    <string name="byte_in_text">Bytes In: </string>
    <string name="byte_out_text">Bytes OUT: </string>
    <string name="country_name_text">Country Name</string>
    <string name="choose_location_text">choose your location</string>
    <string name="default_server_text">Server Default Icon</string>
    <string name="feedback_hint_text">Suggest us what went wrong and we\'ll work on it.</string>
    <string name="country_name">No Server Selected</string>
    <string name="IP_address">Server IP Address</string>
    <string name="one_month_text">1 Month</string>
    <string name="three_months_text">3 Months</string>
    <string name="one_year_text">1 Year</string>
    <string name="app_intro_skip" translatable="false">Skip</string>
<string name="exit">Exit</string>
<string name="error_request_permission">You need access to External Storage</string>
	<string name="tab_layout">Tab Layout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home Fragemnt</string>
     <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
     <string name="title_home">Home</string>
    <string name="chat">Chats</string>
	<string name="connected">Conectado</string>
    <string name="servicestop">Stop Secure</string>
    <string name="authenticating">Authenticating</string>
    <string name="authfailed">Authfailed</string>
    <string name="disconnected">Desconectado</string>
    <string name="nonetwork">Nonetwork</string>
	<string name="connecting">Connecting</string>
<string name="label_dnstt">=== DNSTT ===</string>
<string name="label_sshport">== SSH PORTS ==</string>
<string name="label_acc">== ACCOUNT ==</string>
<string name="importing_settings">Importing configuration</string>
<string name="log_settings_valid">File valid until: %1$s</string>
<string name="log_server_banner">Server Message:</string>
<string name="log_conection_lost">Connection lost</string>
 <string name="proxy_on"><font color='#FF0061E8'>You are Sharing Internet !!</font></string>
  <string name="proxy_off"><font color='#FF0000'>Tap Switch Below To Start !!</font></string>
 <string name="service_text"><font color='#00FF00'>Para compartir internet activa el check !!</font></string>
<string name="start">INICIAR</string>
<string name="stop">DESCONECTAR</string>
<string name="reconnect">RECONECTAR</string>
<string name="stopping_service_ssh">Stopping SSH service</string>
<string name="starting_service_ssh">Starting SSH service</string>
<string name="title_auth">Authentication</string>
<string name="auth_message">Complete with SSH account details</string>
<string name="auth_username">Username</string>
<string name="password">Password</string>
<string name="show_password">Show password</string>
<string name="save_password">Save password</string>
<string name="channel_name_background">Connection statistics</string>
<string name="channel_description_background">Ongoing statistics of the established SocksHttp connection</string>
<string name="channel_name_status">Connection status change</string>
<string name="channel_description_status">Status changes of the SocksHttp connection (Connecting, authenticating,…)</string>
<string name="channel_name_userreq">User interaction required</string>
<string name="channel_description_userreq">SocksHttp connection requires a user input, e.g. two factor authentification</string>
<string name="state_starting">Getting Started</string>
<string name="state_connecting">Connecting</string>
<string name="state_wait">Waiting for server response</string>
<string name="state_auth">Authenticating</string>
<string name="state_auth_success">Authenticated</string>
<string name="state_get_config">Getting client configuration</string>
<string name="state_assign_ip">Assigning IP addresses</string>
<string name="state_add_routes">Adding routes</string>
<string name="state_connected">Conectado</string>
<string name="state_disconnected">Desconectado</string>
<string name="state_reconnecting">Reconnecting</string>
<string name="state_stopping">Stopping</string>
<string name="state_noprocess">Not running</string>
<string name="state_resolve">Resolving host names</string>
<string name="state_tcp_connect">Connecting (TCP)</string>
<string name="state_auth_failed">Authentication failed</string>
<string name="state_nonetwork">Waiting for network</string>
<string name="state_waitconnectretry">Waiting% ss seconds between connection attempt</string>
<string name="state_auth_pending">Waiting for Autentication</string>
<string name="state_user_vpn_password">Waiting for user VPN password</string>
<string name="state_user_vpn_permission">Waiting for user permission to use VPN API</string>
<string name="state_user_vpn_password_cancelled">VPN password input dialog cancelled</string>
<string name="state_user_vpn_permission_cancelled">VPN API permission dialog cancelled</string>
<string name="unknown_state">Status Desconhecido</string>
<string name="nought_alwayson_warning">If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS</string>
<string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
<string name="state_proxy_running">Running proxy</string>
<string name="state_proxy_inject">Injecting</string>
<string name="mobile_info">Running on %3$s %1$s (%2$s), Android %5$s API %4$d</string>
<string name="app_mobile_info">Application Version: %1$s %2$s</string>
<string name="alert_update_app">Install the latest version</string>
<string name="error_settings_expired">Expired file</string>
<string name="error_file_settings_invalid">Invalid configuration</string>
<string name="error_file_invalid">Invalid File</string>
<string name="error_internet_off">Please connect to the internet</string>
<string name="error_empty_payload">Payload cannot be empty</string>
<string name="error_empty_settings">Configure correctly to start</string>
<string name="error_proxy_invalid">Invalid proxy</string>
<string name="error_server_ip_invalid">Invalid server/IP</string>
<string name="error_root_detected">Locked configuration for devices with root access</string>
<string name="error_vpn_sniffer_detected">Another running VPN application has been detected, stop it before</string>
<string name="error_save_settings">"Couldn't save configuration"</string>
<string name="permited_only_network_mobile">Configuration allowed only for mobile data network</string>
<string name="about">Acerca De</string>
<string name="config">Configuration</string>
<string name="settings">Configuraciones</string>
<string name="settings_ssh">SSH Settings</string>
<string name="network_mobile">Mobile network</string>
<string name="method_connection">Connection Method</string>
<string name="rate_app">Rate</string>
<string name="feedback">Feedback</string>
<string name="first_start_msg">This application was developed for advanced users, keep this in mind when using it.</string>
<string name="title_login_main">Login Details</string>
<string name="category_forward_udp">Udp forwarding</string>
<string name="title_forward_udp">Forward UDP</string>
<string name="summary_forward_udp">If active, it redirects requests to the remote server. If not, UDP requests will not be resolved.</string>
<string name="title_resolver_udp">UDP Gateway (Remote)</string>
<string name="summary_resolver_udp">Standard (7300)</string>
<string name="category_forward_dns">DNS Forwarding</string>
<string name="title_forward_dns">Forward DNS</string>
<string name="summary_forward_dns">If active, it redirects requests to the remote server. If not, DNS requests will be resolved by the local system.</string>
<string name="title_dns_primary">Primary DNS</string>
<string name="summary_dns_primary">Standard (1.1.1.1)</string>
<string name="dialog_message_dns_primary">Enter the DNS ip</string>
<string name="category_advanced_settings">Advanced Settings</string>
<string name="title_hide_log">Hide Log on Start</string>
<string name="summary_hide_log">If active, the log will not be shown automatically.</string>
<string name="title_auto_clear_log">Automatically Clear Logs</string>
<string name="summary_auto_clear_log">If active, logs are automatically cleared.</string>
<string name="category_forward_port">Port Forwarding</string>
<string name="title_mode_debug">Debug mode</string>
<string name="title_ping_time">Ping (seconds)</string>
<string name="no_value">none</string>
</resources>